Change construct project