@@ -1,15 +1,14 @@
-# Phân Công Công Việc – Dự Án Web Game Cờ Vây (Go)
+# Phân Công Công Việc – Dự Án Ứng Dụng Game Cờ Vây (Go)
 
 Dự án được thực hiện bởi nhóm 6 thành viên. Mỗi người đảm nhận một mảng độc lập để đảm bảo tiến độ, tránh xung đột code và dễ dàng báo cáo khi bảo vệ.
 
-## 1. FE 1 – UI/UX + Trang Auth
-Phụ trách: Thiết kế và phát triển giao diện người dùng phần xác thực.
-
+## 1. FE 1 – UI/UX + Auth View
+Phụ trách: Thiết kế và phát triển giao diện người dùng phần xác thực trên Desktop.
 Nhiệm vụ chính:
-Xây dựng trang Đăng nhập / Đăng ký bằng HTML/CSS/JS.
-Kết nối API đăng nhập/đăng ký qua fetch.
-Thiết kế giao diện cơ bản cho người dùng.
-Hỗ trợ render giao diện danh sách người chơi.
+Xây dựng màn hình Đăng nhập / Đăng ký bằng Java (FXML + CSS).
+Bắt sự kiện người dùng và gửi thông tin qua luồng TCP Socket (gọi hàm từ module mạng).
+Thiết kế UI/UX cơ bản, bố cục cửa sổ ứng dụng (Window stage).
+Hỗ trợ render giao diện danh sách người chơi đang online.
 ---
 
 ## 2. FE 2 – Lobby + Room UI 
@@ -18,30 +17,30 @@ Phụ trách: Phát triển giao diện Lobby và phòng chơi.
 Nhiệm vụ chính:
 Thiết kế giao diện Lobby: danh sách phòng, nút tạo phòng, tham gia phòng.
 Xây dựng khung giao diện phòng game (không xử lý logic).
-Render chat UI.
-Kết nối Socket.IO client để hiển thị danh sách phòng theo thời gian thực.
+Render khung Chat UI.
+Lắng nghe gói tin từ TCP Client để cập nhật danh sách phòng chơi theo thời gian thực lên giao diện.
 
 ---
 
 ## 3. FE 3: Canvas Game + Ping Effect
-Phụ trách: Hiển thị bàn cờ và hiệu ứng realtime phía frontend.
-
+Phụ trách: Hiển thị bàn cờ và hiệu ứng realtime phía giao diện Client.
 Nhiệm vụ chính:
-Vẽ bàn cờ bằng HTML5 Canvas.
-Vẽ quân đen / trắng, highlight vị trí, xử lý click của người chơi.
-Render nước đi khi server gửi về.
-Xử lý hiệu ứng Ping bằng Canvas.
+Vẽ bàn cờ bằng Java Canvas (GraphicsContext).
+Vẽ quân đen / trắng, highlight vị trí, bắt sự kiện click chuột của người chơi.
+Render nước đi lên màn hình ngay khi nhận được gói tin (Packet) từ Server gửi về.
+Xử lý hiệu ứng Ping (chỉ điểm) bằng Canvas Animation trên Java.
 
 ---
 
-## 4. FE/BE: WebRTC Ping + Socket Client
-Phụ trách: Xử lý kết nối realtime peer-to-peer.
+## 4. FE/BE: TCP Client Socket + Packet Handler
+Phụ trách: Xử lý kết nối TCP xuyên suốt và phân giải gói tin (Serialization/Deserialization) phía Client.
 
 Nhiệm vụ chính:
-Tạo kết nối WebRTC PeerConnection + DataChannel.
-Gửi/nhận tín hiệu Ping qua DataChannel.
-Hỗ trợ kết nối Socket.IO client với frontend.
-Kiểm thử realtime communication.
+Khởi tạo và quản lý java.net.Socket kết nối liên tục tới Server.
+Định nghĩa các class Đọc/Ghi luồng byte (DataInputStream, DataOutputStream).
+Đóng gói/Mở gói tin (Parse JSON sang Java Object bằng Gson/Jackson và ngược lại).
+Đóng gói và gửi tín hiệu Ping/Chat qua luồng TCP chung (thay vì WebRTC như trước).
+Phân luồng sự kiện mạng (Listener Thread) để gọi ngược lại (Callback) cập nhật UI trên luồng JavaFX Application Thread (Platform.runLater).
 
 ---
 
@@ -71,7 +70,7 @@ Tích hợp toàn bộ hệ thống và kiểm thử luồng chạy (Luồng Aut
 - Không ai bị đụng code nhau.
 - Nhiệm vụ rõ ràng, dễ chấm điểm cá nhân.
 - Team làm việc khoa học, dễ quản lý tiến độ.
-- Chia theo đúng kiến trúc thật của dự án real-time.
+- Thể hiện rõ kiến trúc Client-Server truyền thống, cực kỳ phù hợp cho môi trường học thuật và làm nền tảng socket programming.
 
 ---
 
@@ -85,26 +84,25 @@ project/
 │   └── logic/
 │
 │── frontend/
-│   ├── pages/
+│   ├── views/
 │   ├── styles/
-│   ├── scripts/
+│   ├── controllers/
 │   └── canvas/
+│   └── network/
 │
 └── README.md
 ```
 
 # Ngôn Ngữ & Công Nghệ Đề Xuất
 
-Dự án nên được triển khai hoàn toàn bằng Java vì đây là lựa chọn tối ưu nhất cho việc xây dựng kiến trúc Server đa luồng (Multi-threading) xử lý kết nối TCP đồng thời và triển khai bộ engine trọng tài (Go Rules Engine) chạy thuật toán BFS.
+Dự án được triển khai hoàn toàn bằng Java cho cả 2 phía Client và Server. Việc đồng nhất ngôn ngữ giúp tái sử dụng mã nguồn (ví dụ: các class Packet, models) và đơn giản hóa hệ thống.
 
 ## Frontend
 - Hiển thị giao diện Đăng nhập và Đăng ký tài khoản.
 - Hiển thị Lobby bao gồm danh sách phòng chơi và chức năng tạo/tham gia phòng.
-- Hiển thị bàn cờ vây 19x19 bằng JavaFX Canvas.
+- Hiển thị bàn cờ vây 19x19 bằng Java Canvas.
 - Hiển thị quân cờ, lượt chơi hiện tại và trạng thái trận đấu.
-- Đồng bộ trạng thái bàn cờ theo thời gian thực từ Server.
 - Hỗ trợ Chat trực tiếp giữa hai người chơi.
-- Hỗ trợ Ping vị trí trên bàn cờ theo thời gian thực.
 - Hiển thị kết quả trận đấu và điểm số cuối ván.
 
 ## Backend
@@ -115,13 +113,11 @@ Dự án nên được triển khai hoàn toàn bằng Java vì đây là lựa 
 - jBCrypt: Thư viện Java chuyên dụng để mã hóa và kiểm tra mật khẩu an toàn.
 - Gson / Jackson: Thư viện chuyển đổi dữ liệu (Object <-> JSON) để đóng gói và truyền tải qua luồng byte của TCP Socket.
 
-## Vì sao chọn JavaScript + Node.js + Java?
-- FE bắt buộc dùng JS (Canvas + WebRTC API).
-- Node.js đồng bộ ngon với WebSocket/WebRTC.
-- Socket.IO mạnh nhất trên Node.js.
-- Xử lý nhiều kết nối thời gian thực cực nhẹ nhờ event loop.
-- FE & BE dùng chung 1 ngôn ngữ → dễ chia việc, dễ debug, dễ maintain.
-- Java xử lý đa luồng (Multi-threading) mạnh mẽ, hiệu năng cao và độc lập nền tảng.
+## Vì sao chọn Java?
+- Không phụ thuộc vào trình duyệt, tạo ra một ứng dụng game độc lập hoàn chỉnh (.jar / .exe).
+- Học được cách thức mạng máy tính hoạt động ở tầng sâu (Transport Layer) qua việc thao tác trực tiếp với luồng byte thay vì dùng API HTTP hay thư viện bọc sẵn như Socket.IO.
+- Dùng chung 1 ngôn ngữ cho cả Client và Server → Dễ chia việc, chia sẻ chung thư viện gói tin (Shared Packets), dễ debug.
+- Java xử lý đa luồng (Multi-threading) cực kỳ mạnh mẽ và chuẩn mực, đáp ứng hoàn hảo cho cơ chế xử lý Game Server.
 
 
 ---
@@ -130,10 +126,10 @@ Dự án nên được triển khai hoàn toàn bằng Java vì đây là lựa 
 
 ## Yêu Cầu Hệ Thống
 
-- **Node.js**: phiên bản 14.x trở lên
-- **NPM**: phiên bản 6.x trở lên
-- **Trình duyệt**: Chrome, Firefox, Edge (phiên bản mới nhất)
-- **Hệ điều hành**: Windows, macOS, Linux
+- JDK: Java Development Kit phiên bản 11 trở lên (Khuyên dùng JDK 17).
+- Công cụ Build: Maven hoặc Gradle.
+- IDE: IntelliJ IDEA, Eclipse, hoặc NetBeans.
+- Hệ điều hành: Windows, macOS, Linux (Java Write Once, Run Anywhere).
 
 ## Bước 1: Clone Dự Án
 
@@ -143,58 +139,44 @@ git clone <repository-url>
 cd Go-Socket
 ```
 
-## Bước 2: Cài Đặt Dependencies
+## Bước 2: Build Cài Đặt Dependencies (Maven)
 
 ```bash
-# Cài đặt các package cần thiết
-npm install
+# Tải các dependencies và build project
+mvn clean install
 ```
 
-### Các package được cài đặt:
-- **express**: Web framework cho Node.js
-- **socket.io**: Thư viện WebSocket cho real-time communication
-- **jsonwebtoken**: Xác thực người dùng
-- **cors**: Xử lý CORS
-- **nodemon**: Auto-restart server khi dev (devDependencies)
-- **jbcrypt**: Hash mật khẩu
-- **sqlite-jdbc**: Driver kết nối cơ sở dữ liệu SQLite với ứng dụng Java thông qua kết nối JDBC.
+## Các thư viện chính trong pom.xml:
+- javafx-controls, javafx-fxml: Thư viện UI UI.
+- sqlite-jdbc: Driver SQLite.
+- jBCrypt: Mã hóa mật khẩu.
+- gson: Parse JSON.
 
 ## Bước 3: Khởi Động Server
 
-### Development Mode (với auto-restart)
+Mở class ServerMain.java trong module server trên IDE và nhấn Run, hoặc chạy lệnh sau qua Terminal:
 ```bash
-npm run dev
+java -cp target/server.jar com.go.server.ServerMain
 ```
 
-### Production Mode
-```bash
-npm start
-```
-
-Server sẽ chạy tại: **http://localhost:3000**
+Server sẽ báo log: Server started on TCP port 8080...
 
 ## Bước 4: Truy Cập Ứng Dụng
 
-Mở trình duyệt và truy cập:
+Mở class ClientMain.java trong module client trên IDE và nhấn Run (để mô phỏng nhiều người chơi, bạn chỉ cần Run class này nhiều lần để mở nhiều cửa sổ ứng dụng).
 
-- **Trang đăng nhập**: http://localhost:3000
-- **Trang đăng ký**: http://localhost:3000/register
-- **Lobby**: http://localhost:3000/lobby (sau khi đăng nhập)
-- **Game**: http://localhost:3000/game (tự động chuyển khi vào phòng)
+```bash
+java -module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar target/client.jar
+```
 
 ## Bước 5: Kiểm Thử Hệ Thống
 
-### Chạy test tự động
-```bash
-node backend/integration-test.js
-```
-
-### Kiểm thử thủ công
-1. Mở 2 cửa sổ trình duyệt (hoặc 1 cửa sổ thường + 1 Incognito)
-2. Đăng ký 2 tài khoản khác nhau
-3. User 1: Tạo phòng
-4. User 2: Tham gia phòng của User 1
-5. Bắt đầu chơi!
+1. Chạy Server.
+2. Khởi chạy 2 cửa sổ Client Desktop.
+3. Đăng ký 2 tài khoản khác nhau trên 2 cửa sổ.
+4. User 1: Tạo phòng tại Lobby.
+5. User 2: Nhấn làm mới Lobby và Tham gia phòng của User 1.
+6. Bắt đầu chơi!
 
 Xem chi tiết: [TESTING_GUIDE.md](TESTING_GUIDE.md)
 
@@ -240,41 +222,28 @@ Xem chi tiết: [TESTING_GUIDE.md](TESTING_GUIDE.md)
 ## 🔒 Tính Năng Bảo Mật & Anti-Cheat
 
 ### Authentication
-- ✅ Mật khẩu được hash bằng **bcrypt** (10 rounds)
-- ✅ Xác thực bằng **JWT token** (hết hạn sau 24h)
-- ✅ Middleware kiểm tra token cho mọi kết nối Socket.IO
+- ✅ Mật khẩu được hash bằng BCrypt phía Server.
+- ✅ Quản lý phiên đăng nhập bằng Session Token cấp phát riêng qua TCP cho mỗi Client.
+- ✅ Mọi gói tin TCP sau khi đăng nhập đều phải đính kèm Session Token để Server xác thực.
 
 ### Anti-Cheat (Chống gian lận)
-- ✅ Kiểm tra người chơi có trong phòng không
-- ✅ Kiểm tra đúng lượt chơi
-- ✅ Validate tọa độ nước đi
-- ✅ Kiểm tra nước đi theo luật cờ vây (Ko, Suicide, Capture)
-- ✅ Ghi log mọi hành vi gian lận
-- ✅ Server có quyền cuối cùng trong mọi quyết định
+- ✅ Server chặn mọi gói tin giả mạo tọa độ từ Client đã bị chỉnh sửa code.
+- ✅ Kiểm tra đúng lượt chơi mới xử lý.
+- ✅ Server nắm toàn quyền giữ trạng thái bàn cờ hiện tại, kiểm tra luật Ko, Suicide trước khi đồng ý nước đi.
+- ✅ Bắt lỗi đứt kết nối (TCP Disconnect): Xử lý tự động xử thua người ngắt kết nối giữa trận.
 
 ---
 
 ## 🐛 Troubleshooting
 
-### Lỗi: "Cannot find module"
-```bash
-# Xóa node_modules và cài lại
-rm -rf node_modules
-npm install
-```
+## Lỗi: "Address already in use: JVM_Bind" hoặc "Port 8080 is in use"
+Có một tiến trình Server khác đang chạy ngầm. Mở Task Manager tắt mọi tiến trình java.exe và chạy lại Server.
 
-### Lỗi: "Port 3000 is already in use"
-```bash
-# Đổi port trong backend/server.js
-const PORT = process.env.PORT || 3001;
-```
+## Lỗi: NullPointerException khi mở giao diện Client
+Kiểm tra lại đường dẫn file .fxml hoặc .css trong phương thức FXMLLoader.load(). Đảm bảo file nằm đúng trong thư mục resources.
 
-### Database bị lỗi
-```bash
-# Xóa database cũ và tạo lại
-rm backend/database/database.db
-npm start
-```
+## Database không lưu hoặc báo lỗi SQLite
+Đảm bảo thư mục chứa file database.db đã được cấp quyền Ghi (Write), hoặc thử xóa file database.db đi để hệ thống tự động tạo lại (nếu đã code logic auto-create tables).
 
 ---
 
@@ -291,45 +260,27 @@ npm start
 
 |
 
-#### 1. Game Logic (gameLogic.js)
+#### 1. Game Logic (gameLogic.java)
 - ✅ Thuật toán BFS tìm nhóm quân và đếm "khí"
 - ✅ Validate nước đi (Ko, Suicide, Capture)
 - ✅ Xử lý bắt quân
-- ✅ Tính điểm lãnh thổ + Komi
+- ✅ Tính điểm tự động ở cuối trận
 
-#### 2. Anti-Cheat System (gameHandler.js)
-- ✅ Server-side validation toàn diện
-- ✅ Kiểm tra quyền và lượt chơi
-- ✅ Ghi log hành vi gian lận
-- ✅ Chặn mọi nước đi không hợp lệ
+#### 2. Protocol Manager (PacketHandler.java)
+- ✅ Giao thức Serialize/Deserialize bằng JSON.
+- ✅ Phân luồng các Action_Code (vd: LOGIN_REQ, MOVE_RES, CHAT_PACKET).
 
-#### 3. Integration (Tích hợp FE-BE)
-- ✅ Đồng bộ socket events
-- ✅ Kết nối tất cả modules
-- ✅ Fix bugs tích hợp
-- ✅ Real-time sync
+#### 3. Tích hợp & Xử lý sự kiện mạng
+- ✅ Đồng bộ luồng UI JavaFX (Platform.runLater()) để tránh lỗi Not on FX application thread.
+- ✅ Xử lý ngắt kết nối an toàn (socket.close()).
 
 #### 4. Testing (Kiểm thử)
-- ✅ Integration tests (backend/integration-test.js)
-- ✅ Testing guide (TESTING_GUIDE.md)
-- ✅ Test toàn bộ flow: Login → Lobby → Game
-- ✅ Test anti-cheat và luật cờ
+- ✅ Viết testcase JUnit cho GameLogic.java.
+- ✅ Test cường độ cao bằng cách mở hàng chục Client kết nối cùng lúc xem Server có bị sập hay không.
 
 #### 5. Documentation
-- ✅ README.md (hướng dẫn chạy dự án)
-- ✅ TESTING_GUIDE.md (hướng dẫn kiểm thử)
-- ✅ Code comments chi tiết
-- ✅ Chuẩn bị nội dung báo cáo & demo
+- ✅ Code comments bằng Javadoc chuẩn.
+- ✅ README chuẩn bị cho báo cáo và demo.
 
----
 
-## 📞 Liên Hệ & Hỗ Trợ
-
-Nếu gặp vấn đề:
-1. Kiểm tra [TESTING_GUIDE.md](TESTING_GUIDE.md)
-2. Xem console log (F12 → Console)
-3. Kiểm tra server log
-4. Liên hệ team
-
----
 
